# openvario-compman

./: .coveralls.yml  .gitignore  .travis.yml  CHANGES.md  MANIFEST.in  Makefile  Pipfile  README.md  compman.ini  sample.env  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
src/compman/: __init__.py  config.py  http.py  main.py  ovshell.py  soaringspot.py  soarscore.py  storage.py  xcsoar.py
src/compman/ui/: activity.py  classselector.py  compdetails.py  mainmenu.py  selectcomp.py  soaringspot.py  taskdownload.py  welcome.py  widget.py
tests/: conftest.py  test_main.py  test_ovshell.py  test_soaringspot_real.py  test_soarscore.py  test_storage.py
tests/fixtures/: activitytestbed.py  soaringspot.py  soarscore.py  widgettestbed.py
tests/fixtures/soarscore/: no-tasks.html  two-classes.html
tests/ui/: test_classselector.py  test_compdetails.py  test_mainmenu.py  test_selectcomp.py  test_soaringspot.py  test_taskdownload.py  test_welcome.py
