[metadata]
name = openvario-compman
version = 0.6.1.dev0
description = Competition Manager for OpenVario
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kedder/openvario-compman
author = Andrey Lebedev
author_email = andrey.lebedev@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = openvario tui competition igc xcsoar
project_urls =
   

[options]
package_dir = =src
packages = find:
python_requires = >=3.9, <4
install_requires =
    urwid
    aiohttp
    requests
    lxml
    openvario-shell
data_files =
   

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compman=compman.main:main
ovshell.extensions =
    compman=compman.ovshell:extension

[options.extras_require]
dev =
    black
    mypy
test =
    pytest
    pytest-coverage
    pytest-asyncio
    pytest-mock

[mypy]
ignore_missing_imports = True

[isort]
profile = black
multi_line_output = 9

[check-manifest]
ignore =
    Pipfile*
    screenshots/*
    sample.env
    .coveralls.yml
    Makefile
